K1J-560: Fixed integration tests